--- a/src/html/section/intro-section.html
+++ b/src/html/section/intro-section.html
@@ -1,329 +1,5 @@
 <section class="intro-section">
-
-    <div class="intro-head">
-        <div id="catpicker" class="intro-list">
-            <div class="intro-group">
-                <input type="checkbox" checked id="1">
-                <label class="btn primary " for="1">
-                    Название товара 1
-                </label>
-            </div>
-            <div class="intro-group">
-                <input type="checkbox" checked id="2">
-                <label class="btn primary" for="2">
-                    Напитки
-                </label>
-            </div>
-            <div class="intro-group">
-                <input type="checkbox" checked id="3">
-                <label class="btn primary" for="3">
-                    Имя продукта
-                </label>
-            </div>
-            <div class="intro-group">
-                <input type="checkbox" checked id="4">
-                <label class="btn primary" for="4">
-                    Название товара 2
-                </label>
-            </div>
-            <div class="intro-group">
-                <input type="checkbox" checked id="5">
-                <label class="btn primary" for="5">
-                    Картофельные блюда
-                </label>
-            </div>
-            <div class="intro-group">
-                <input type="checkbox" checked id="6">
-                <label class="btn primary" for="6">
-                    Название товара 3
-                </label>
-            </div>
-            <div class="intro-group">
-                <input type="checkbox" checked id="7">
-                <label class="btn primary" for="7">
-                    Название товара 4
-                </label>
-            </div>
-            <div class="intro-group">
-                <input type="checkbox" checked id="8">
-                <label class="btn primary" for="8">
-                    Супы и бульоны
-                </label>
-            </div>
-            <div class="intro-group">
-                <input type="checkbox" checked id="9">
-                <label class="btn primary" for="9">
-                    Блюда из рыбы
-                </label>
-            </div>
-            <div class="intro-group">
-                <input type="checkbox" checked id="10">
-                <label class="btn primary" for="10">
-                    Картофельные блюда
-                </label>
-            </div>
-            <div class="intro-group">
-                <input type="checkbox" checked id="11">
-                <label class="btn primary" for="11">
-                    Название товара 5
-                </label>
-            </div>
-        </div>
-    </div>
     <div class="intro-body">
-        <div class="intro-wrap">
-            <div class="intro 1">
-                <div class="intro__wrap">
-                    <h2 class="intro__title">Ricard 4CL</h2>
-                    <div class="intro__col">
-                        <span class="intro__price">5.20$</span>
-                        <div class="intro__btn">
-                            <button type="button" class="btn secondary  displayNone">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/minus.html')
-                                </span>
-                            </button>
-                            <button type="button" class="btn secondary ">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/plus.html')
-                                </span>
-                                <span class="intro__text">ADD TO CARD</span>
-                            </button>
-                            <button type="button" class="btn tertiary displayNone">x2</button>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="intro 2">
-                <div class="intro__wrap">
-
-                    <h2 class="intro__title">Название может <br>быть в две строки</h2>
-                    <div class="intro__col">
-                        <span class="intro__price">15.50$</span>
-                        <div class="intro__btn">
-                            <button type="button" class="btn secondary  ">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/minus.html')
-                                </span>
-                            </button>
-                            <button type="button" class="btn secondary ">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/plus.html')
-                                </span>
-                                <span class="intro__text">ADD TO CARD</span>
-                            </button>
-                            <button type="button" class="btn tertiary ">x2</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="intro 3">
-                <div class="intro__wrap">
-                    <h2 class="intro__title">Pinot noir Ver</h2>
-                    <div class="intro__col">
-                        <span class="intro__price">7.80$</span>
-                        <div class="intro__btn">
-                            <button type="button" class="btn secondary  displayNone">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/minus.html')
-                                </span>
-                            </button>
-                            <button type="button" class="btn secondary ">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/plus.html')
-                                </span>
-                                <span class="intro__text">ADD TO CARD</span>
-                            </button>
-                            <button type="button" class="btn tertiary displayNone">x2</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="intro 4">
-                <div class="intro__wrap">
-                    <h2 class="intro__title">Ricard 4CL</h2>
-                    <div class="intro__col">
-                        <span class="intro__price">5.20$</span>
-                        <div class="intro__btn">
-                            <button type="button" class="btn secondary  displayNone">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/minus.html')
-                                </span>
-                            </button>
-                            <button type="button" class="btn secondary ">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/plus.html')
-                                </span>
-                                <span class="intro__text">ADD TO CARD</span>
-                            </button>
-                            <button type="button" class="btn tertiary displayNone">x2</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="intro 5">
-                <div class="intro__wrap">
-                    <h2 class="intro__title">Veggie chili</h2>
-                    <div class="intro__col">
-                        <span class="intro__price">15.50$</span>
-                        <div class="intro__btn">
-                            <button type="button" class="btn secondary  displayNone">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/minus.html')
-                                </span>
-                            </button>
-                            <button type="button" class="btn secondary ">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/plus.html')
-                                </span>
-                                <span class="intro__text">ADD TO CARD</span>
-                            </button>
-                            <button type="button" class="btn tertiary displayNone">x2</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="intro 6">
-                <div class="intro__wrap">
-
-                    <h2 class="intro__title">Pinot noir Ver</h2>
-                    <div class="intro__col">
-                        <span class="intro__price">7.80$</span>
-                        <div class="intro__btn">
-                            <button type="button" class="btn secondary  displayNone">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/minus.html')
-                                </span>
-                            </button>
-                            <button type="button" class="btn secondary ">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/plus.html')
-                                </span>
-                                <span class="intro__text">ADD TO CARD</span>
-                            </button>
-                            <button type="button" class="btn tertiary displayNone">x2</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="intro 7">
-                <div class="intro__wrap">
-                    <h2 class="intro__title">Ricard 4CL</h2>
-                    <div class="intro__col">
-                        <span class="intro__price">5.20$</span>
-                        <div class="intro__btn">
-                            <button type="button" class="btn secondary  displayNone">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/minus.html')
-                                </span>
-                            </button>
-                            <button type="button" class="btn secondary ">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/plus.html')
-                                </span>
-                                <span class="intro__text">ADD TO CARD</span>
-                            </button>
-                            <button type="button" class="btn tertiary displayNone">x2</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="intro 8">
-                <div class="intro__wrap">
-                    <h2 class="intro__title">Veggie chili</h2>
-                    <div class="intro__col">
-                        <span class="intro__price">15.50$</span>
-                        <div class="intro__btn">
-                            <button type="button" class="btn secondary  displayNone">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/minus.html')
-                                </span>
-                            </button>
-                            <button type="button" class="btn secondary ">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/plus.html')
-                                </span>
-                                <span class="intro__text">ADD TO CARD</span>
-                            </button>
-                            <button type="button" class="btn tertiary displayNone">x2</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="intro 9">
-                <div class="intro__wrap">
-                    <h2 class="intro__title">Veggie chili</h2>
-                    <div class="intro__col">
-                        <span class="intro__price">15.50$</span>
-                        <div class="intro__btn">
-                            <button type="button" class="btn secondary  displayNone">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/minus.html')
-                                </span>
-                            </button>
-                            <button type="button" class="btn secondary ">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/plus.html')
-                                </span>
-                                <span class="intro__text">ADD TO CARD</span>
-                            </button>
-                            <button type="button" class="btn tertiary displayNone">x2</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="intro 10">
-                <div class="intro__wrap">
-                    <h2 class="intro__title">Veggie chili</h2>
-                    <div class="intro__col">
-                        <span class="intro__price">15.50$</span>
-                        <div class="intro__btn">
-                            <button type="button" class="btn secondary  displayNone">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/minus.html')
-                                </span>
-                            </button>
-                            <button type="button" class="btn secondary ">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/plus.html')
-                                </span>
-                                <span class="intro__text">ADD TO CARD</span>
-                            </button>
-                            <button type="button" class="btn tertiary displayNone">x2</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="intro 11">
-                <div class="intro__wrap">
-                    <h2 class="intro__title">Veggie chili</h2>
-                    <div class="intro__col">
-                        <span class="intro__price">15.50$</span>
-                        <div class="intro__btn">
-                            <button type="button" class="btn secondary  displayNone">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/minus.html')
-                                </span>
-                            </button>
-                            <button type="button" class="btn secondary ">
-                                <span class="intro__icon">
-                                    @@include('../svg-icon/plus.html')
-                                </span>
-                                <span class="intro__text">ADD TO CARD</span>
-                            </button>
-                            <button type="button" class="btn tertiary displayNone">x2</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        @@include('../components/tabs.html')
     </div>
 </section>
